# legoify

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/: requirements.txt
src/legoify/: LEGO.gpl  __about__.py  image.py  indicator.py  main.py  parts.py  util.py
tests/: __init__.py
